--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,8 @@ node_modules/
 /public/packs
 /public/packs-test
 /public/assets
+/public/uploads
+/public/noimage.png
 
 # Ignore yarn files
 /yarn-error.log
